Fix window scrollbars on Windows (#2654)
* #2652 remove excessive scrollbars
#2652 show all of text in longText fields (don't clip it)

* Remove vertical scroll on HU editor #2652

* #2652 fix extendid rows when selected

* - remove unnecessary anonymous function in WidgetTooltip event handler

* - fix position of WidgetTooltip in extended field

* - fix lint

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -41,7 +41,9 @@
 * - 200 < - elements that are over backdrop (header expanded)
 * - 400 - screen-freeze
 */
-
+html {
+    overflow: auto !important;
+}
 
 body {
     background-color: #F8FAFB;
